[tool.poetry]
name = "pompem"
version = "0.1.0"
description = "Exploit finder tool"
authors = ["rfunix <rafinha.unix@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.6.3"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
pompem = "pompem.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
